# lazycli

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  args.rs  command.rs  config.rs  event_loop.rs  main.rs  os_commands.rs  profile_matching.rs  template.rs  terminal_manager.rs  ui.rs
src/config/: linux.rs  mod.rs  prepare.rs  storage.rs  windows.rs
src/parse/: char_pos_iter.rs  mod.rs
src/ui/: keybindings.rs  mod.rs
src/util/: command.rs  event.rs  mod.rs  signal.rs  stateful_table.rs
