[package]
name = "lazycli"
version = "0.1.0"
authors = ["Jesse Duffield <jessedduffield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5.5"
clap = "3.0.0-beta.2"
regex = "1"

[dev-dependencies]
pretty_assertions = "0.6.1"
