[package]
name = "lazycli"
version = "0.1.0"
authors = ["Jesse Duffield <jessedduffield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.19", features = [ "serde" ] }
clap = "3.0.0-beta.2"
regex = "1"
serde = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
