[package]
name = "lazycli"
version = "0.1.15"
authors = ["Jesse Duffield <jessedduffield@gmail.com>"]
license = "MIT"
edition = "2018"
description = "A tool to instantly wrap your CLI commands in TUIs"
readme = "README.md"
homepage = "https://github.com/jesseduffield/lazycli"
repository = "https://github.com/jesseduffield/lazycli"
keywords = ["cli", "lazy", "terminal", "tools"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.19", features = [ "serde" ] }
clap = "3.0.0-beta.2"
regex = "1"
serde = "1.0"
serde_yaml = "0.8.15"
directories = "3.0"
ticker = "0.1.1"
itertools = "0.10.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
